# 8bit

./: 8bit.py  LICENSE  README.md  _8bit.py  encodings.html  encodings.py  index.html  pyproject.toml
.github/workflows/: main.yml  pypi.yml
tests/: test_8bit.py  test_links.py  wikipedia_snapshots.json
